--- a/index.html
+++ b/index.html
@@ -10,7 +10,48 @@
 <body>
     
 
-    <!-- Compiled and minified JavaScript -->
+    <!-- DEFINIENDO LA DIRECCION DE CDN, Y LAS FUNCIONES -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.1.1/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.1.1/firebase-auth.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.1.1/firebase-firestore.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.1.1/firebase-functions.js"></script>
+    <script src="./js/config/firebase.config.js"></script>
+    <script src="./js/config/materialize.config.js"></script>
 </body>
 </html>
+
+
+
+
+
+
+
+
+
+
+W
+<!-- The core Firebase JS SDK is always required and must be listed first -->
+<script src="https://www.gstatic.com/firebasejs/8.1.1/firebase-app.js"></script>
+
+<!-- TODO: Add SDKs for Firebase products that you want to use
+     https://firebase.google.com/docs/web/setup#available-libraries -->
+<script src="https://www.gstatic.com/firebasejs/8.1.1/firebase-analytics.js"></script>
+
+<script>
+  // Your web app's Firebase configuration
+  // For Firebase JS SDK v7.20.0 and later, measurementId is optional
+  var firebaseConfig = {
+    apiKey: "AIzaSyAb5ILYCfjg50d-245eDE8jG2aZXFmRVuE",
+    authDomain: "wil-sistemas-operativos.firebaseapp.com",
+    databaseURL: "https://wil-sistemas-operativos.firebaseio.com",
+    projectId: "wil-sistemas-operativos",
+    storageBucket: "wil-sistemas-operativos.appspot.com",
+    messagingSenderId: "802887522465",
+    appId: "1:802887522465:web:11cc3c5b6cea12eb1ab8e0",
+    measurementId: "G-S4M50DF5GS"
+  };
+  // Initialize Firebase
+  firebase.initializeApp(firebaseConfig);
+  firebase.analytics();
+</script>
