authenticarion status add

--- a/index.html
+++ b/index.html
@@ -15,19 +15,19 @@
         Fire-Quotes
       </a>
       <ul id="nav-mobile" class="right hide-on-med-and-down">
-        <li class="logged-in">
+        <li class="logged-in" style="display: none;">
           <a href="#" class="white-text modal-trigger" data-target="modal-account">Account</a>
         </li>
-        <li class="logged-in">
+        <li class="logged-in" style="display: none;">
           <a href="#" class="white-text modal-trigger" data-target="modal-create">Create Quote</a>
         </li>
-        <li class="logged-in">
+        <li class="logged-out" style="display: none;">
           <a href="#" class="white-text modal-trigger" data-target="modal-login">login</a>
         </li>
-        <li class="logged-in">
+        <li class="logged-out" style="display: none;">
           <a href="#" class="white-text modal-trigger" data-target="modal-signup">Sign up</a>
         </li>
-        <li class="logged-in">
+        <li class="logged-in" style="display: none;">
           <a href="#" class="white-text" id="logout">Logout</a>
         </li>
       </ul>
@@ -74,7 +74,13 @@
     </div>
   </div>
     
-
+  <div id="modal-account" class="modal">
+    <div class="modal-content center-align">
+      <h4>Account details</h4>
+      <br />
+      <div class="account-details"></div>
+    </div>
+  </div>
 
     <!-- DEFINIENDO LA DIRECCION DE CDN, Y LAS FUNCIONES -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
@@ -86,5 +92,6 @@
     <script src="./js/config/materialize.config.js"></script>
     <script src="./js/utils/definitions.js"></script>
     <script src="js/auth.js"></script>
+    <script src="js/index.js"></script>
 </body>
 </html>
