--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Wil - Sistemas Operativos</title>
       <!-- Compiled and minified CSS -->
-      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css" />
 </head>
 <body>
   <!-- MODAL DE NAVEGACION -->
@@ -82,6 +82,9 @@
     </div>
   </div>
 
+  <div class="container" style="margin-top: 40px;">
+    <ul class="collapsible z-depth-0 quotes" style="border: none;"></ul>
+  </div>
     <!-- DEFINIENDO LA DIRECCION DE CDN, Y LAS FUNCIONES -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.1.1/firebase-app.js"></script>
