--- a/index.html
+++ b/index.html
@@ -85,6 +85,23 @@
   <div class="container" style="margin-top: 40px;">
     <ul class="collapsible z-depth-0 quotes" style="border: none;"></ul>
   </div>
+  <div id="modal-create" class="modal">
+    <div class="modal-content">
+      <h4>Create Quote</h4>
+      <br />
+      <form id="create-form">
+        <div class="input-field">
+          <input type="text" id="author" required />
+          <label for="author">Author</label>
+        </div>
+        <div class="input-field">
+          <textarea id="message" class="materialize-textarea" required></textarea>
+          <label for="content">Message Content</label>
+        </div>
+        <button class="btn yellow darken-2 z-depth-0">Create</button>
+      </form>
+    </div>
+  </div>
     <!-- DEFINIENDO LA DIRECCION DE CDN, Y LAS FUNCIONES -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.1.1/firebase-app.js"></script>
@@ -96,5 +113,6 @@
     <script src="./js/utils/definitions.js"></script>
     <script src="js/auth.js"></script>
     <script src="js/index.js"></script>
+    <script src="js/quote.js"></script>
 </body>
 </html>
