--- a/index.html
+++ b/index.html
@@ -33,6 +33,10 @@
       </ul>
     </div>
   </nav>
+  <form class="center-align admin-actions admin" id="adminForm" style="margin: 40px auto; max-width: 300px; display: none;">
+    <input type="email" placeholder="User email" id="admin-email" required />
+    <button class="btn-small yellow darken-2 z-depth-0">Make admin</button>
+  </form>
   <!-- MODAL DE REGISTRO -->
   <div id="modal-signup" class="modal">
     <div class="modal-content">
@@ -114,5 +118,6 @@
     <script src="js/auth.js"></script>
     <script src="js/index.js"></script>
     <script src="js/quote.js"></script>
+    <script src="js/admin.js"></script>
 </body>
 </html>
