finished floats design

--- a/index.html
+++ b/index.html
@@ -90,9 +90,53 @@
     </div>
   </div>
 
-  <div class="container" style="margin-top: 40px;">
-    <ul class="collapsible z-depth-0 quotes" style="border: none;"></ul>
+
+
+
+  <div class="row">
+    <div class="col s12 m6 quotes right">
+      
+    </div>
+    <div class="col s12 m3 offset-m2 offset-m1 quotes left">
+        <div class="card">
+          <div class="card-image">
+            <img src="https://i.pinimg.com/originals/cd/b3/98/cdb398e23fcbbfba7b04abe41da10b77.png">
+            <span class="card-title black-text"><a href="https://github.com/willseven" class="perfil">Wilson Condori Pairumani</a></span>
+          </div>
+          <div class="card-content">
+            <p><b>Carrera:</b><hr><span>Ingenieria de Sistemas</span></p>
+            <p><b>Materia:</b><hr><span>Sistemas Operativos</span></p>
+            <p><b>Tems:</b><hr><span>Proyecto Final</span></p>
+            <p><b>Gestion:</b><hr><span>2020</span></p>
+          </div>
+          <div class="card-action">
+            <a href="https://github.com/willseven">Willseven</a>
+          </div>
+        </div>      
+    </div>
   </div>
+            
+
+
+
+
+
+<!-- 
+  <div class="container" style="margin-top: 40px;">
+    <ul class=" z-depth-0 quotes" style="border: none;"></ul>
+  </div> -->
+
+
+
+
+
+
+
+
+
+
+
+
   
   <div id="modal-create" class="modal">
     <div class="modal-content">
